<resources>
    <string name="app_name">Planner</string>
    <string name="list_btn">To do</string>
    <string name="schedule_btn">Schedule</string>
    <string name="calendar_btn">Calendar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addNote">Add new task</string>
    <string name="AddBtn">Add</string>
    <string name="EnterTask">Enter task name</string>
    <string name="EnterDescription">Enter task description</string>
    <string name="DeleteTask">Delete task</string>

    <!-- schedule -->
    <string name="tab_1">MON</string>
    <string name="tab_2">TUE</string>
    <string name="tab_3">WED</string>
    <string name="tab_4">THUR</string>
    <string name="tab_5">FRI</string>

    <!-- calendar -->
    <string name="addCalendarNote">Add new note</string>
    <string name="removeCalendarNote">Remove note</string>
    <string name="dataFormat">dd.mm.yyyy</string>
    <string name="enterCalendarNote">Note</string>
    <string name="wifiOn">Wifi is on</string>
    <string name="wifiOff">Wifi is off</string>
    <string name="sendBtn">Send</string>
    <string name="emailTasks">Email tasks for the day</string>

</resources>
