<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/dateId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dataFormat"
        android:inputType="date|textPersonName"
        android:text="@string/dataFormat" />

    <EditText
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="197dp"
        android:ems="10"
        android:hint="@string/dataFormat"
        android:inputType="textPersonName"
        android:text="@string/enterCalendarNote" />

    <Button
        android:id="@+id/noteId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AddBtn" />
</LinearLayout>